# zeroxml

./: .gitignore  1  CMakeLists.txt  COPYING  ChangeLog  INSTALL  README  README.md  description
.github/workflows/: codeql.yml
CMakeModules/: CPack_Defaults.cmake
examples/: CMakeLists.txt  printtree.c  printxml.c  sample.xml  xmlgrep.c  xmlvalidate.c
include/: config.h.in  easyxml.hxx  rmalloc.h  types.h  xml.h  xml.h.in  xml_cache.h
src/: .xml.c.swp  api.h  easyxml.cpp  localize.c  rmalloc.c  xml.c  xml_cache.c  xml_cache.h
test/: .test_mmap.c.swp  CMakeLists.txt  errors.xml  french.xml  sample-utf8.xml  sample.xml  simple.xml  test_buffer.c  test_doctype.c  test_easy_xml.cpp  test_errors.c  test_functions.c  test_fuzzing.c  test_fuzzing.cpp  test_mmap.c  test_shared.c  test_shared.h  test_unicode.c  validation-with-BOM.xml  validation.xml
