
FUNCTION(CREATE_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBZEROXML} Iconv::Iconv)
ENDFUNCTION()


CREATE_TEST(xmlgrep)
INSTALL(TARGETS xmlgrep
          RUNTIME DESTINATION bin
          LIBRARY DESTINATION "lib${LIB_SUFFIX}"
          ARCHIVE DESTINATION "lib${LIB_SUFFIX}"
       )

CREATE_TEST(xmlvalidate)
INSTALL(TARGETS xmlvalidate
          RUNTIME DESTINATION bin
          LIBRARY DESTINATION "lib${LIB_SUFFIX}"
          ARCHIVE DESTINATION "lib${LIB_SUFFIX}"
       )

CREATE_TEST(printtree)
CREATE_TEST(printxml)
